--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 /.idea
-/ __pychache__
+/__pychache__
+*.pyc
+*.pyo
+.installed.cfg
+bin
+develop-eggs
+dist
+downloads
+eggs
+parts
+src/*.egg-info
+lib
+lib64
